PokeTradR/force-app/main/default/objects/Trainer__c/Trainer__c.object-meta.xml
<CustomObject>
    <description>Account of Trainers</description>
    <label>Trainer</label>
    <nameField>
        <label>Trainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>