PokeTradR/force-app/main/default/objects/Trainer__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <label>Bio</label>
    <type>TextArea</type>
</CustomField>