PokeTradR/force-app/main/default/objects/Trainer__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>Birthday</label>
    <required>true</required>
    <type>Date</type>
</CustomField>