PokeTradR/force-app/main/default/objects/Trainer__c/fields/Current_Offers__c.field-meta.xml
<CustomField>
    <fullName>Current_Offers__c</fullName>
    <label>Current Offers</label>
    <summarizedField>Offer__c.Number__c</summarizedField>
    <summaryForeignKey>Offer__c.Trainer_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>