PokeTradR/force-app/main/default/objects/Trainer__c/fields/Current_Trades__c.field-meta.xml
<CustomField>
    <fullName>Current_Trades__c</fullName>
    <label>Current Trades</label>
    <summarizedField>Trade__c.Number__c</summarizedField>
    <summaryForeignKey>Trade__c.Trainer_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>