PokeTradR/force-app/main/default/objects/Trainer__c/fields/Dated_Joined__c.field-meta.xml
<CustomField>
    <fullName>Dated_Joined__c</fullName>
    <description>When they first joined PokeTradR</description>
    <label>Dated Joined</label>
    <type>Date</type>
</CustomField>