PokeTradR/force-app/main/default/objects/Trainer__c/fields/Offers_Made__c.field-meta.xml
<CustomField>
    <fullName>Offers_Made__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offers Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>