PokeTradR/force-app/main/default/objects/Trainer__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>