PokeTradR/force-app/main/default/objects/Trainer__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>Based on total of Trades Made and Offers Made it will cause the Trainer Rank to assign: 
Rookie (&lt;25), 
Intermediate(&gt;= 25 &amp; &lt;50),
Advanced (&gt;= 50 &amp; &lt;75)
Master(&gt;= 75 &amp; &lt;100)</description>
    <label>Rank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>