PokeTradR/force-app/main/default/objects/Trainer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Active - Profile can make trades and offers
Inactive - Profile can&apos;t make trades and offers
Frozen - Profile temporarily cannot make trades</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>