PokeTradR/force-app/main/default/objects/Trainer__c/fields/Strikes__c.field-meta.xml
<CustomField>
    <fullName>Strikes__c</fullName>
    <description>Amount of Strikes on Trainer profile. More strikes mean more severe penalties</description>
    <label>Strikes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>