PokeTradR/force-app/main/default/objects/Trainer__c/fields/Trainer_ID__c.field-meta.xml
<CustomField>
    <fullName>Trainer_ID__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Trainer ID</label>
    <type>AutoNumber</type>
</CustomField>